--- a/Backend/PraTest/PraTest.csproj
+++ b/Backend/PraTest/PraTest.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient.SNI.runtime" Version="5.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
