--- a/Backend/WebApi/WebApi.csproj
+++ b/Backend/WebApi/WebApi.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient.SNI.runtime" Version="5.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
